[gd_scene load_steps=21 format=3 uid="uid://ll1pmd436rgx"]

[ext_resource type="Script" uid="uid://c3s7xjasqsoxb" path="res://root_scenes/round/round.gd" id="1_v6yer"]
[ext_resource type="Script" uid="uid://7vw62jfhqglr" path="res://root_scenes/round/player_spawner.gd" id="2_j0dvr"]
[ext_resource type="PackedScene" uid="uid://bifayyhudopdi" path="res://root_scenes/round/backgrounds/crap_skin_color_2.tscn" id="2_k4tbe"]
[ext_resource type="PackedScene" uid="uid://djaye3edy1wd5" path="res://root_scenes/round/backgrounds/crap_skin_color.tscn" id="2_on8o6"]
[ext_resource type="PackedScene" uid="uid://cqef7kj40c3xm" path="res://root_scenes/round/backgrounds/lizard_skin_color.tscn" id="3_on8o6"]
[ext_resource type="Script" uid="uid://pse7mut484yx" path="res://root_scenes/round/player_container.gd" id="3_y8in6"]
[ext_resource type="PackedScene" uid="uid://ixo1qhmijyhj" path="res://player/player_score_label.tscn" id="7_bxfx3"]
[ext_resource type="Script" uid="uid://y35pcjkdfkk1" path="res://root_scenes/round/barrier_spawner.gd" id="8_siu77"]
[ext_resource type="Script" uid="uid://daq7b4e7y0wc5" path="res://root_scenes/round/barrier_container.gd" id="9_efv08"]
[ext_resource type="Script" uid="uid://btj4a0fqnffa" path="res://randomise_music.gd" id="10_l55id"]
[ext_resource type="AudioStream" uid="uid://bpey2wglj5q0v" path="res://assets/music/rounds/8-bit-console-from-my-childhood-301286.mp3" id="11_24pdy"]
[ext_resource type="Script" path="res://root_scenes/round/ScreenShake.gd" id="11_idtc3"]
[ext_resource type="AudioStream" uid="uid://nv15kf4h3qs6" path="res://assets/music/rounds/retro-arcade-game-music-396890.mp3" id="12_ls7l8"]
[ext_resource type="AudioStream" uid="uid://bx5306gbcjtid" path="res://assets/music/rounds/retro-game-arcade-236133.mp3" id="13_52rxd"]
[ext_resource type="AudioStream" uid="uid://cyxexx56om3sq" path="res://assets/music/rounds/retro-game-music-245230.mp3" id="14_ghtj8"]
[ext_resource type="AudioStream" uid="uid://8b67syqy6o0m" path="res://assets/music/rounds/the-console-of-my-dreams-301289.mp3" id="15_6w0ir"]
[ext_resource type="AudioStream" uid="uid://exor2od56bbd" path="res://assets/music/rounds/the-return-of-the-8-bit-era-301292.mp3" id="16_flmu8"]
[ext_resource type="AudioStream" uid="uid://dyi7q7r8jaui7" path="res://assets/music/rounds/the-world-of-8-bit-games-301273.mp3" id="17_d328q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(20, 480)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(885, 20)

[node name="Round" type="Node2D"]
script = ExtResource("1_v6yer")

[node name="CrapSkinColor" parent="." instance=ExtResource("2_on8o6")]

[node name="CrapSkinColor2" parent="." instance=ExtResource("2_k4tbe")]
visible = false

[node name="LizardSkinColor" parent="." instance=ExtResource("3_on8o6")]
visible = false

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(-8, 241)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2(855, 241)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wall"]
position = Vector2(424.5, -6)
shape = SubResource("RectangleShape2D_h2yge")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wall"]
position = Vector2(426, 487)
shape = SubResource("RectangleShape2D_h2yge")

[node name="TweezerSpawnTimer" type="Timer" parent="."]
wait_time = 9.95
autostart = true

[node name="BarrierSpawner" type="Node" parent="."]
script = ExtResource("8_siu77")

[node name="BarrierContainer" type="Node" parent="BarrierSpawner"]
script = ExtResource("9_efv08")

[node name="PlayerSpawner" type="Node" parent="."]
script = ExtResource("2_j0dvr")

[node name="PlayerContainer" type="Node" parent="PlayerSpawner"]
script = ExtResource("3_y8in6")

[node name="PlayerSpawn1" type="Marker2D" parent="PlayerSpawner"]
unique_name_in_owner = true
position = Vector2(107, 97)

[node name="PlayerSpawn2" type="Marker2D" parent="PlayerSpawner"]
unique_name_in_owner = true
position = Vector2(646, 96)

[node name="PlayerSpawn3" type="Marker2D" parent="PlayerSpawner"]
unique_name_in_owner = true
position = Vector2(110, 348)

[node name="PlayerSpawn4" type="Marker2D" parent="PlayerSpawner"]
unique_name_in_owner = true
position = Vector2(658, 358)

[node name="RoundTimer" type="Timer" parent="."]
autostart = true

[node name="PlayerScoreLabel1" parent="." instance=ExtResource("7_bxfx3")]
player_id = 1

[node name="PlayerScoreLabel2" parent="." instance=ExtResource("7_bxfx3")]
layout_direction = 3
offset_left = -841.0
offset_right = -641.0
offset_bottom = 23.0
player_id = 2

[node name="PlayerScoreLabel3" parent="." instance=ExtResource("7_bxfx3")]
offset_top = 452.0
offset_right = 200.0
offset_bottom = 475.0
player_id = 3

[node name="PlayerScoreLabel4" parent="." instance=ExtResource("7_bxfx3")]
layout_direction = 3
offset_left = -839.0
offset_top = 448.0
offset_right = -639.0
offset_bottom = 471.0
player_id = 4

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
volume_db = -10.306
script = ExtResource("10_l55id")
resources = Array[AudioStream]([ExtResource("11_24pdy"), ExtResource("12_ls7l8"), ExtResource("13_52rxd"), ExtResource("14_ghtj8"), ExtResource("15_6w0ir"), ExtResource("16_flmu8"), ExtResource("17_d328q")])

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("11_idtc3")

[connection signal="timeout" from="TweezerSpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
